<resources>
    <string name="app_name">Jesus Is Lord Radio</string>
    <string name="record">Record</string>
    <string name="playRecorded">Play Recorded</string>
    <string name="stopPlayingRecorded">Stop Playing Recorded</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="networkUnavailable">No Internet Connectivity</string>
    <string name="connect">Please Connect</string>
    <string name="please_paste_link">Please Paste Link</string>
    <string name="title">Radio App</string>
    <string name="content">Prepare The Way</string>
    <string name="radio_stream">Jesus Is Lord Radio</string>
    <string name="news_updates">News Updates</string>
    <string name="prepare">Isaiah 40:3 Prepare The Way Messiah Is Coming</string>
    <string name="About">About Us (Youtube Channels)</string>
    <string name="call">Call Us Line 1</string>
    <string name="call_2">Call Us Line 2</string>
    <string name="sms">Send SMS</string>
    <string name="emailUs">Email Us</string>
    <string name="youtubeChannel1">Repentance Channel</string>
    <string name="youtubeChannel2">Repent and Prepare the way Channel</string>
    <string name="youtubeChannel3">Live-Streamed Events</string>
    <string name="twitter">Twitter</string>
    <string name="share">Share</string>
    <string name="translate">Speech To Text</string>
    <string name="input_fileName">Please input file name </string>
    <string name="whatsapp">Whatsapp</string>
    <string name="website">Website</string>
    <string name="filename">File Name</string>
    <string name="paste_here">Please paste Youtube video link here…</string>
    <string name="audio_file_path">Recording saved in </string>
    <string name="applicationNotfound"> Sorry, application not found</string>
    <string name="error_no_yt_link">Please provide a valid video link…</string>
    <string name="radio_sms">text message</string>
    <string name="translationFailure">Sorry, Translation Error</string>
    <string name="permission_rationale">"Calling phone permissions are needed for making calls."</string>
    <string name="r_library">Recordings Library</string>
    <string name="youtube_download">Download Videos</string>
    <string name="updates">Updates</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="playing">Radio is On..</string>
    <string name="off">Radio is Off..</string>
    <string name="startRecording">Recording Started</string>
    <string name="noFileFound">Sorry, No File Found</string>
    <string name="endRecording">STOP</string>
    <string name="exit">EXIT</string>
    <string name="cancel">CANCEL</string>
    <string name="stopRecording">Recording Stopped</string>
    <string name="confirmsStopRecording">ARE YOU SURE?</string>
    <string name="delete">DELETE</string>
    <string name="noRecentRecord">Sorry, No Recent Recording</string>
    <string name="bytes">Bytes</string>
    <string name="voice_msg_input_hint_speaking">Saying ...</string>
    <string name="voice_msg_input_hint_time_limited_formatter" formatted="false">%d s left</string>
    <string name="play_icon_upper_path_data">M 44 32 L 44 64 L 100 64 L 100 64 Z</string>
    <string name="play_icon_bottom_path_data">M 44 96 L 44 64 L 100 64 L 100 64 Z</string>
    <string name="pause_icon_upper_path_data">M 32 40 L 32 56  L 96 56 L 96 40 Z</string>
    <string name="pause_icon_bottom_path_data">M 32 88 L 32 72 L 96 72 L 96 88 Z</string>
    <string name="paste_url">Paste Video URL here.</string>
    <string name="youtubeLink">Youtube Link</string>
    <string name="download">Download</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="title_activity_video_streamer">VideoStreamer</string>
    <string name="title_activity_recordings_library">Recordings</string>
    <string name="app_name_short">GoCoder SDK</string>
    <string name="app_name_long">Wowza GoCoder SDK Examples</string>
    <string name="camera_example_title">GoCoder SDK Capture Example</string>
    <string name="event_example_title">GoCoder SDK Events and Metadata Example</string>
    <string name="mp4_broadcast_title">GoCoder SDK MP4 Broadcast Example</string>
    <string name="mp4_capture_title">GoCoder SDK MP4 Capture Example</string>
    <string name="audio_meter_title">GoCoder SDK Bluetooth Mic Example</string>
    <string name="audio_bluetooth_title">GoCoder SDK Audio Meter Example</string>
    <string name="info_title">Device Information APIs</string>
    <string name="face_title">Face Detection Example</string>
    <string name="stream_player_title">Live Stream Player Example</string>
    <string name="screenshot_title">Screenshot Example</string>
    <string name="text_overlay_title">GoCoder SDK Text Overlay Example</string>
    <string name="opengl_title">GoCoder SDK OpenGL Capture Example</string>
    <string name="bitmap_overlay_title">GoCoder SDK Bitmap Overlay Example</string>
    <string name="surface_view_title">GoCoder SDK OpenGL ES Capture Example</string>
    <string name="audio_meter_help">Press the mic icon to toggle the audio level meter</string>
    <string name="audio_bluetooth_help">The Bluetooth mic will be used for audio input if present</string>
    <string name="bitmap_overlay_help">Use a pinch gesture to scale the overlay logo</string>
    <string name="action_send">Send to Wowza Support</string>
    <string name="action_copy">Copy to clipboard</string>
    <string name="resize_aspect_mode">Aspect</string>
    <string name="resize_aspect_fill_mode">Fill</string>
    <string name="dialog_title_error">An error occurred</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_close">Close</string>
    <string name="status_connecting">Connecting...</string>
    <string name="status_connected">Connected</string>
    <string name="status_disconnecting">Disconnecting...</string>
    <string name="status_buffering">Retrieving Stream...</string>
    <string name="button_dismiss">Dismiss</string>
    <string name="button_cancel">Cancel</string>
    <string name="msg_please_wait">Please wait</string>
    <string name="label_datagrid_table_title">Table Title</string>
    <string name="label_datagrid_header_property">Property</string>
    <string name="label_datagrid_header_setting">Setting</string>
    <string name="label_datagrid_header_key">Key</string>
    <string name="label_datagrid_header_name">Name</string>
    <string name="label_datagrid_header_value">Value</string>
    <string name="about_product_label">Wowza GoCoder SDK</string>
    <string name="about_copyright_line1">&#169; 2013&#8211;2018 Wowza Media Systems, LLC</string>
    <string name="about_copyright_line2">All Rights Reserved</string>
    <string name="about_support_information">Support Information</string>
    <string name="about_header_platform">Device Model and Platform</string>
    <string name="about_header_display">Display Information</string>
    <string name="about_header_camera">Camera Information</string>
    <string name="about_header_codecs">Video and Audio Media Codecs</string>
    <string name="about_header_opengles">OpenGL ES Information</string>
    <string name="connection_settings_title">Connection Settings</string>
    <string name="connection_settings_summary">Specify the connection settings for the Wowza Streaming Engine</string>
    <string name="wz_live_host_address_title">Host Address</string>
    <string name="wz_live_host_address_summary">The hostname or IP address of a Wowza Streaming Engine server</string>
    <string name="wz_live_host_address_dialog_title">Enter the hostname or IP address</string>
    <string name="wz_live_port_number_title">Port Number</string>
    <string name="wz_live_port_number_summary">The port no. for the Wowza Streaming Engine</string>
    <string name="wz_live_port_number_dialog_title">Enter the port number</string>
    <string name="wz_live_port_number_default_value">1935</string>
    <string name="wz_live_app_name_title">Application Name</string>
    <string name="wz_live_app_name_summary">The name of the live streaming application</string>
    <string name="wz_live_app_name_dialog_title">Enter the application name</string>
    <string name="wz_live_app_name_default_value">live</string>
    <string name="wz_live_stream_name_title">Stream Name</string>
    <string name="wz_live_stream_name_summary">The name of the live stream</string>
    <string name="wz_live_stream_name_dialog_title">Enter the steam name</string>
    <string name="wz_live_stream_name_default_value">myStream</string>
    <string name="wz_live_username_title">Source User Name</string>
    <string name="wz_live_username_summary">The username for source authentication</string>
    <string name="wz_live_username_dialog_title">Enter the source username</string>
    <string name="wz_live_password_title">Source Password</string>
    <string name="wz_live_password_summary">The password for source authentication</string>
    <string name="wz_live_password_dialog_title">Enter the source password</string>
    <string name="video_settings_title">Video Stream Settings</string>
    <string name="video_settings_summary">Specify the settings for the video stream</string>
    <string name="wz_video_enabled_title">Enable video streaming</string>
    <string name="wz_video_enabled_title_summary">Indicates if video should be streamed</string>
    <string name="wz_video_enabled_default_value">true</string>
    <string name="wz_video_preset_title">Commonly used presets</string>
    <string name="wz_video_preset_summary">Select from a list of optimized frame size / bitrate combinations</string>
    <string name="wz_video_preset_dialog_title">Select a frame size / bitrate combination</string>
    <string name="wz_video_preset_default_value">4</string>
    <string name="wz_video_frame_size_title">Video frame size (px)</string>
    <string name="wz_video_frame_size_summary">The video frame size</string>
    <string name="wz_video_frame_size_dialog_title">Select a video frame size (px)</string>
    <string name="wz_video_frame_size_default_value">4</string>
    <string name="wz_video_bitrate_title">Bitrate (kbps)</string>
    <string name="wz_video_bitrate_summary">The bitrate for the video stream</string>
    <string name="wz_video_bitrate_dialog_title">Enter the video stream bitrate (kbps)</string>
    <string name="wz_video_bitrate_default_value">1500</string>
    <string name="wz_video_framerate_title">Framerate (fps)</string>
    <string name="wz_video_framerate_summary">The framerate for the video stream</string>
    <string name="wz_video_framerate_dialog_title">Enter the framerate (fps)</string>
    <string name="wz_video_framerate_default_value">30</string>
    <string name="wz_video_keyframe_interval_title">Keyframe interval</string>
    <string name="wz_video_keyframe_interval_summary">The # of frames in between each keyframe</string>
    <string name="wz_video_keyframe_interval_dialog_title">Enter the # of frames in between each keyframe</string>
    <string name="wz_video_keyframe_interval_default_value">30</string>
    <string name="wz_video_player_prebuffer_duration_title">Playback pre-buffer duration</string>
    <string name="wz_video_player_prebuffer_duration_summary">The # of seconds buffered before playback begins</string>
    <string name="wz_video_player_prebuffer_duration_dialog_title">Enter the # of seconds to buffer before playback begins</string>
    <string name="wz_video_player_prebuffer_duration_default_value">0</string>
</resources>